# dio-lab-bia-do-futuro

./: README.md  index.html  index2.html
data/base_de_conhecimento/: clientes.csv  contas_correntes.csv  produtos_financeiros.csv  transacoes.csv
data/sql/: criar_tabelas.sql  inserir_dados.sql
docs/: 01-documentacao-agente.md  02-base-conhecimento.md  03-prompts.md  04-metricas.md  05-pitch.md  index.html  index.md
src/: README.md  docker-compose.yml  env.example
src/api/: .gitignore  Dockerfile  README.md  main.py  pyproject.toml
src/api/core/: database.py
src/api/core/shared/: config_logging.py  dependencies.py  settings.py
src/api/llm/factory/: factory_llm.py
src/api/llm/prompt/: bank_human.py  bank_system.py
src/api/llm/provider/: base_proviser.py  ollma_provider.py
src/api/llm/serializer/: serialization.py
src/api/llm/services/: bank_assistente.py  context_builder.py  intent_classifier.py
src/api/models/bank/: models_bank.py
src/api/repository/bank_profile/: cliente.py
src/api/repository/bank_transection/: conta.py
src/api/repository/ia/: asssitante.py
src/api/router/bank_profile/: cliente.py
src/api/router/bank_transection/: conta.py
src/api/router/ia/: assistant.py
src/api/schemas/ai/: assistant.py
src/api/schemas/bank/: cliente.py  conta.py  transacao.py
src/api/service/bank_profile/: cliente.py
src/api/service/bank_transection/: conta.py
src/api/service/ia/: assistant.py
src/db/: init.sql
src/ollama/: Dockerfile
src/streamlit/: Dockerfile  main.py  pyproject.toml  service.py
