[tool.poetry]
name = "dio-bank"
version = "0.0.1"
description = "Api que se comunica com registro bancario e LLM"
authors = ["Jean <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"

fastapi = {extras = ["standard"], version = "^0.133.1"}
sqlalchemy = {extras = ["asyncio"], version = "^2.0.47"}
asyncpg = "^0.31.0"
langchain-ollama = "^1.0.1"
langchain-openai = "^1.1.10"
python-dotenv = "^1.2.2"
pydantic-settings = "^2.13.1"
requests = "^2.32.5"
pydantic = "^2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
